Use function name parameter in endpoint definition of custom resource provider

--- a/functionapp-and-custom-resource-provider.json
+++ b/functionapp-and-custom-resource-provider.json
@@ -113,14 +113,14 @@
                     {
                         "name": "indoor",
                         "routingType": "Proxy",
-                        "endpoint": "[concat('https://api-backend.azurewebsites.net/api/forward')]"
+                        "endpoint": "[concat('https://', parameters('funcName'), '.azurewebsites.net/api/forward')]"
                     }
                 ],
                 "resourceTypes": [
                     {
                         "name": "indoor",
                         "routingType": "Proxy",
-                        "endpoint": "[concat('https://api-backend.azurewebsites.net/api/forward')]"
+                        "endpoint": "[concat('https://', parameters('funcName'), '.azurewebsites.net/api/forward')]"
                     }
                 ]
             }
