--- a/functionapp-and-custom-resource-provider.json
+++ b/functionapp-and-custom-resource-provider.json
@@ -116,24 +116,24 @@
                     {
                         "name": "indoor-base",
                         "routingType": "Proxy",
-                        "endpoint": "[concat('https://', parameters('funcName'), '.azurewebsites.net/api/forward')]"
+                        "endpoint": "[concat('https://', parameters('funcName'), '.azurewebsites.net/api/forward', '?code=', listKeys(resourceId('Microsoft.Web/sites/functions', parameters('funcName'), 'forward'), '2018-02-01').default)]"
                     },
                     {
                         "name": "indoor-tags-status",
                         "routingType": "Proxy",
-                        "endpoint": "[concat('https://', parameters('funcName'), '.azurewebsites.net/api/forward')]"
+                        "endpoint": "[concat('https://', parameters('funcName'), '.azurewebsites.net/api/forward', '?code=', listKeys(resourceId('Microsoft.Web/sites/functions', parameters('funcName'), 'forward'), '2018-02-01').default)]"
                     }
                 ],
                 "resourceTypes": [
                     {
                         "name": "indoor-base",
                         "routingType": "Proxy",
-                        "endpoint": "[concat('https://', parameters('funcName'), '.azurewebsites.net/api/forward')]"
+                        "endpoint": "[concat('https://', parameters('funcName'), '.azurewebsites.net/api/forward', '?code=', listKeys(resourceId('Microsoft.Web/sites/functions', parameters('funcName'), 'forward'), '2018-02-01').default)]"
                     },
                     {
                         "name": "indoor-tags-status",
                         "routingType": "Proxy",
-                        "endpoint": "[concat('https://', parameters('funcName'), '.azurewebsites.net/api/forward')]"
+                        "endpoint": "[concat('https://', parameters('funcName'), '.azurewebsites.net/api/forward', '?code=', listKeys(resourceId('Microsoft.Web/sites/functions', parameters('funcName'), 'forward'), '2018-02-01').default)]"
                     }
                 ]
             }
